# dasher

./: .gitignore  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  codacy.yml  push._yml  rust-clippy.yml  stackhawk.yml
Dockerfiles/: Dockerfile
lib/: bridge_generated.dart  main.dart  proxy_ffi.dart
rust/: Cargo.toml
rust/src/: bridge_generated.io.rs  bridge_generated.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
