# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "1.49.0"
anyhow = "1.0.66"
num = "0.4.0"
image = "0.24.3"
crossbeam = "0.8.2"



